# Alvin-Smart-Money-Classification

./: .gitignore  Pipfile  README.md  environment.yml  results.md  setup.cfg
notebooks/: adversarial_validation.ipynb  error_analysis.ipynb  exploration.ipynb  model_insights.ipynb
src/: cli.py  config.py  models.py  params.py  predict.py  preprocessors.py  train.py  tune.py  utils.py
