[metadata]
name = alvin-smcc
version = attr: src.__version__
author = Harison Gachuru
author_email = harisongachuru@gmail.com
description = My solution for the Alvin Smart Money Classification Challenge
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/harisonmg/Alvin-Smart-Money-Classification
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    python-decouple
    pandas
    scikit-learn
    catboost
    lightgbm
    xgboost
    mlflow
    optuna

[options.entry_points]
console_scripts =
    alvin-smcc = src.cli:main

[options.extras_require]
notebook =
    jupyter
    seaborn
    pandas-profiling
dev =
    black
    isort
    flake8
